tdf#151283 calc hangs when try to open XLS file

regression from
    commit 258a8d133d0548c7af51f4852260e9969df288fc
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    tdf#150034 very slow opening pathological chart

if nNewLen is < 10, we can get stuck in an infinite loop
because the calculation will not actually decrement nNewLen

Change-Id: I98920deaa087713c44531a7f6506d1d5d32b2e98
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140949
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>